# DataHandle

./: .gitattributes  BuildConfig.xcconfig  CMakeLists.txt  DataHandle.podspec  DataHandle.qbs  LICENSE  LICENSE.md  Podfile  README.md  Tests.xcconfig
DataHandle/: CMakeLists.txt  ContainerReadHandle.h  ContainerWriteHandle.h  DataHandleBase.cpp  DataHandleBase.h  DataReadHandle.h  DataTypes.h  DataWriteHandle.cpp  DataWriteHandle.h  RawBytesReadHandle.h  SharedDataHandle.h  StreamReadHandle.h  StreamWriteHandle.h
DataHandle/DataHandle/: ContainerReadHandle.h  ContainerWriteHandle.h  DataHandleBase.cpp  DataHandleBase.h  DataHandleUtils.cpp  DataHandleUtils.h  DataReadHandle.cpp  DataReadHandle.h  DataTypes.h  DataWriteHandle.cpp  DataWriteHandle.h  FileWriteHandle.h  PrefixHeader.pch  RawBytesReadHandle.h  SharedDataHandle.h  StreamHandleBase.h  StreamReadHandle.cpp  StreamReadHandle.h  StreamWriteHandle.cpp  StreamWriteHandle.h  SubReadHandle.cpp  SubReadHandle.h
DataHandle/DataHandle.xcodeproj/: project.pbxproj
DataHandle/DataHandleTests/: CommonReadHandleTest.cpp  CommonWriteHandleTest.cpp  ConcreteReadHandleTest.cpp  ConcreteWriteHandleTest.cpp  DataHandleUtilsTest.cpp  PrefixHeader.pch  TestData.h
DataHandle/DataHandleXcodeTests/: PrefixHeader.pch
DataHandle/include/DataHandle/: DataHandleTypes.h  (+15 more)
DataHandle/src/: ComposeReadHandle.cpp  ComposeWriteHandle.cpp  DataHandleBase.cpp  DataReadHandle.cpp  DataWriteHandle.cpp  ParallelWriteHandle.cpp  SequentialReadHandle.cpp  StreamReadHandle.cpp  StreamWriteHandle.cpp  SubRangeReadHandle.cpp  SubReadHandle.cpp
(+28 files in other folders)
